hb/w2/d4_shell-intermediate/output.txt
hello there
  File "err.py", line 2
    ;
    ^
SyntaxError: invalid syntax
